Ultimos cambios en los html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 		<title></title>
 	</head>
 	<body>
-		<h1>Mi página web HTML 2</h1>
+		<h1>Mi página web HTML</h1>
 		<ul> 
 			<li> <a href="index.html"> Inicio</a> </li>
 			<li> <a href="pagina1.html"> Pagina1</a> </li>
