--- a/pagina1.html
+++ b/pagina1.html
@@ -4,11 +4,11 @@
 		<title></title>
 	</head>
 	<body>
-		<h1>Pagina1 5</h1>
+		<h1>Pagina1</h1>
 		<ul> 
 			<li> <a href="index.html"> Inicio</a> </li>
 			<li> <a href="pagina1.html"> Pagina1</a> </li>
 		</ul>
-		<p> Pagina1 en el curso de GIT 2</p>
+		<p> Pagina1 en el curso de GIT</p>
 	</body>
 </html>
