--- a/pagina1.html
+++ b/pagina1.html
@@ -4,7 +4,7 @@
 		<title></title>
 	</head>
 	<body>
-		<h1>Pagina1</h1>
+		<h1>Pagina1 23456678</h1>
 		<ul> 
 			<li> <a href="index.html"> Inicio</a> </li>
 			<li> <a href="pagina1.html"> Pagina1</a> </li>
