--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<body>
 		<h1>Mi página web HTML 123</h1>
 		<ul> 
-			<li> <a href="index.html"> Inicio</a> </li>
+			<li> <a href="index.html"> Inicio 0</a> </li>
 			<li> <a href="pagina1.html"> Pagina1</a> </li>
 		</ul>
 		<p> Hola mundo este es el curso de GIT</p>
