--- a/contacto.html
+++ b/contacto.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<h1>Contacto</h1>
-		<h2>Esto es la pagina de contacto</h2>
+		<h2>Esto es la pagina de contacto 1234</h2>
 	</body>
 </html>
