Commit por error cherry-pick

--- a/contacto.html
+++ b/contacto.html
@@ -6,5 +6,6 @@
 	<body>
 		<h1>Contacto</h1>
 		<h2>Esto es la pagina de contacto 1234</h2>
+		<p> Hola mundo este es el curso de GIT</p>
 	</body>
 </html>
