--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
 			<li> <a href="index.html"> Inicio 0</a> </li>
 			<li> <a href="pagina1.html"> Pagina1</a> </li>
 		</ul>
-		<p> Hola mundo este es el curso de GIT</p>
+		<p> Hola mundo este es el curso de GIT 2</p>
+		<p> Hola mundo este es el curso de GIT 3</p>
+		<p> Hola mundo este es el curso de GIT 4</p>
 	</body>
 </html>
