--- a/pagina1.html
+++ b/pagina1.html
@@ -10,5 +10,6 @@
 			<li> <a href="pagina1.html"> Pagina1</a> </li>
 		</ul>
 		<p> Pagina1 en el curso de GIT</p>
+		<p> Hola mundo este es el curso de GIT</p>
 	</body>
 </html>
