--- a/contacto.html
+++ b/contacto.html
@@ -7,5 +7,6 @@
 		<h1>Contacto</h1>
 		<h2>Esto es la pagina de contacto 1234</h2>
 		<p> Hola mundo este es el curso de GIT</p>
+		<p> Hola mundo este es el curso de GIT 2</p>
 	</body>
 </html>
