--- a/pagina1.html
+++ b/pagina1.html
@@ -11,5 +11,6 @@
 		</ul>
 		<p> Pagina1 en el curso de GIT</p>
 		<p> Hola mundo este es el curso de GIT</p>
+		<p> Hola mundo este es el curso de GIT 2</p>
 	</body>
 </html>
