--- a/contacto.html
+++ b/contacto.html
@@ -8,5 +8,6 @@
 		<h2>Esto es la pagina de contacto 1234</h2>
 		<p> Hola mundo este es el curso de GIT</p>
 		<p> Hola mundo este es el curso de GIT 2</p>
+		<p> Hola mundo este es el curso de GIT 3</p>
 	</body>
 </html>
