--- a/contacto.html
+++ b/contacto.html
@@ -4,7 +4,7 @@
 		<title>Contacto</title>
 	</head>
 	<body>
-		<h1>Contacto</h1>
+		<h1>Pagina de Contacto</h1>
 		<h2>Esto es la pagina de contacto 1234</h2>
 		<p> Hola mundo este es el curso de GIT</p>
 		<p> Hola mundo este es el curso de GIT 2</p>
