Cambio en pagina de contacto dese local

--- a/contacto.html
+++ b/contacto.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html lang=esp>
 	<head>
-		<title>Contacto</title>
+		<title>Pagina de Contacto - desde el repo local</title>
 	</head>
 	<body>
 		<h1>Pagina de Contacto</h1>
